# Siberien

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SerializedObject.txt  config.yaml  out.yaml  settings.yaml  test.yaml
source/: CMakeLists.txt  Project.props  ProjectDebug.props  ProjectRetail.props  Siberien.sln
source/Engine/: Animation.cpp  Animation.h  BlenderSceneLoader.cpp  BlenderSceneLoader.h  BoxCollider.cpp  BoxCollider.h  BulletSystem.cpp  BulletSystem.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Common.h  Component.h  Config.cpp  Config.h  CorpseRemoveSystem.cpp  CorpseRemoveSystem.h  Dbg.cpp  Dbg.h  EnemyCreep.cpp  EnemyCreep.h  Engine.cpp  Engine.vcxproj  Engine.vcxproj.filters  FlyCameraMovement.cpp  FlyCameraMovement.h  GameEvents.cpp  GameEvents.h  GameLibrariesManager.cpp  GameLibrariesManager.h  GameObject.cpp  GameObject.h  GameplaySceneScenario.cpp  GameplaySceneScenario.h  Graphics.cpp  Graphics.h  Grenade.cpp  Grenade.h  Gun.cpp  (+61 more)
source/Engine/SEngine/: AlignedAllocator.h  Animation.cpp  Animation.h  Asserts.h  BlenderSceneLoader.cpp  BlenderSceneLoader.h  BoxCollider.cpp  BoxCollider.h  CMakeLists.txt  Camera.cpp  Camera.h  Cmd.cpp  Cmd.h  Collider.cpp  Collider.h  Common.h  Component.cpp  Component.h  Compression.cpp  Compression.h  Config.cpp  Config.h  Dbg.cpp  Dbg.h  DbgSceneSelectionScreen.cpp  DbgVars.cpp  DbgVars.h  Defines.h  Editor.cpp  Editor.h  EditorCameraController.cpp  Engine.cpp  Engine.h  FileWatcher.cpp  FileWatcherLinux.cpp  FileWatcherOSX.cpp  FileWatcherWin32.cpp  FlyCameraMovement.cpp  GameEvents.h  GameLibrariesManager.cpp  (+83 more)
source/Engine/include/: Animation.h  Asserts.h  Camera.h  Common.h  Component.cpp  Component.h  Dbg.h  Defines.h  Engine.h  GameEvents.h  GameObject.h  Graphics.h  Input.h  Light.h  Mesh.h  MeshRenderer.h  Object.h  Physics.h  Reflect.h  Resources.h  RigidBody.h  SMath.cpp  SMath.h  STime.h  Scene.h  SceneManager.h  Serialization.h  Shader.h  System.h  Texture.h  Transform.h
source/Game/: BulletSystem.cpp  BulletSystem.h  CorpseRemoveSystem.cpp  CorpseRemoveSystem.h  EnemyCreep.cpp  Game.vcxproj  Game.vcxproj.filters  GameplaySceneScenario.cpp  GameplaySceneScenario.h  Grenade.cpp  Grenade.h  Gun.h  Health.cpp  Pickup.cpp  Pickup.h  PlayerController.cpp  PlayerController.h  PostProcessingEffect.cpp  PostProcessingEffect.h  Source.cpp  TopDownCameraRig.cpp  TopDownCameraRig.h  ZombiepunkGame.cpp  ZombiepunkGame.h
source/GameMod/: GameMod.vcxproj  Source.cpp
source/Test/: NavMeshAgentTest.cpp  Test.vcxproj  Test.vcxproj.filters
source/libs/RecastDetour/DebugUtils/: CMakeLists.txt
source/libs/RecastDetour/Detour/: CMakeLists.txt
source/libs/RecastDetour/DetourCrowd/: CMakeLists.txt
source/libs/RecastDetour/DetourTileCache/: CMakeLists.txt
source/libs/RecastDetour/Recast/: CMakeLists.txt
source/libs/SDL/: .gitignore
source/libs/SDL/VisualC/SDL/: SDL.vcxproj
source/libs/SDL/VisualC/SDLmain/: SDLmain.vcxproj
source/libs/SDL_mixer/VisualC/: SDL_mixer.vcxproj
source/libs/SDL_mixer/VisualC/native_midi/: native_midi.vcxproj
source/libs/SDL_mixer/VisualC/playmus/: playmus.vcxproj
source/libs/SDL_mixer/VisualC/playwave/: playwave.vcxproj
source/libs/SDL_mixer/VisualC/timidity/: timidity.vcxproj
source/libs/assimp/: .gitignore  ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  revision.h  uninstall.vcxproj  uninstall.vcxproj.filters
source/libs/assimp/code/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp.vcxproj  assimp.vcxproj.filters
source/libs/assimp/contrib/zlib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
source/libs/assimp/tools/assimp_cmd/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp_cmd.vcxproj  assimp_cmd.vcxproj.filters
source/libs/bgfx/: .gitignore  CMD_OUTPUT
source/libs/bgfx/.build/: CMakeCache.txt
source/libs/bgfx/examples/common/: bgfx_utils.cpp  bgfx_utils.h  bounds.cpp  bounds.h
source/libs/bgfx/include/bgfx/: bgfx.h
source/libs/bgfx/scripts/: bgfx.lua  genie.lua
source/libs/bgfx/src/: bgfx.cpp  bgfx_p.h  config.h
source/libs/bimg/src/: image_decode.cpp
source/libs/bullet/: .gitignore  build_visual_studio_without_pybullet_vr.bat
source/libs/bullet/build3/vs2010/: 0_Bullet3Solution.sln  App_BulletExampleBrowser.vcxproj  App_BulletExampleBrowser.vcxproj.filters  App_HelloBulletRobotics.vcxproj  App_HelloBulletRobotics.vcxproj.filters  App_HelloWorld.vcxproj  App_HelloWorld.vcxproj.filters  App_PhysicsServerSharedMemoryBridgeTCP.vcxproj  App_PhysicsServerSharedMemoryBridgeTCP.vcxproj.filters  App_PhysicsServerSharedMemoryBridgeUDP.vcxproj  App_PhysicsServerSharedMemoryBridgeUDP.vcxproj.filters  App_PhysicsServerTCP.vcxproj  App_PhysicsServerTCP.vcxproj.filters  App_PhysicsServerUDP.vcxproj  App_PhysicsServerUDP.vcxproj.filters  App_PhysicsServer_SharedMemory.vcxproj  App_PhysicsServer_SharedMemory.vcxproj.filters  App_PhysicsServer_SharedMemory_GUI.vcxproj  App_PhysicsServer_SharedMemory_GUI.vcxproj.filters  App_PhysicsServer_SharedMemory_VR.vcxproj  App_PhysicsServer_SharedMemory_VR.vcxproj.filters  App_RobotSimulator.vcxproj  App_RobotSimulator.vcxproj.filters  App_SimpleOpenGL3.vcxproj  (+107 more)
source/libs/bx/: .gitignore
source/libs/bx/scripts/: toolchain.lua
source/libs/compressonator/: CMakeLists.txt
source/libs/compressonator/cmp_compressonatorlib/: CMakeLists.txt  compressonator.h
source/libs/compressonator/cmp_framework/: CMakeLists.txt  compute_base.cpp
source/libs/compressonator/vs2017/: cmp_compressonatorlib.vcxproj  cmp_core.vcxproj  cmp_framework.vcxproj
source/libs/lz4/: CMakeLists.txt  liblz4.pc.cmakein
source/libs/lz4/lib/: CMakeLists.txt
source/libs/mathfu/: mathfu.vcxproj  mathfu.vcxproj.filters
source/libs/optick/src/: optick.config.h
source/libs/physfs/: .gitignore
source/libs/rapidyaml/: CMakeLists.txt
source/libs/yaml-cpp/: .gitignore
(+383 files in other folders)
